fixes overflow issues on short screens

--- a/src/components/styles/OneColumn.scss
+++ b/src/components/styles/OneColumn.scss
@@ -20,7 +20,7 @@
   );
 
   @media screen and (min-width: $screen-width-sm) {
-    top: 3rem;
+    margin-top: 3rem;
     min-height: 560px;
     height: 70%;
     width: 70%;
